Need to finish styling and some layout issues
media quieres?

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ h1.header {
 	font-size: 100px;
 	text-transform: uppercase;
 	font-family: 'Raleway', sans-serif;
-	background-color: #00E4AC;
+	background-color: #72A69C;
 	/*letter-spacing:50px;*/
 	border-radius:10px;
 	text-align:center;	
@@ -21,7 +21,8 @@ p.current {
 
 .eight.wide.column.tempature {
 	/*height:300px;*/
-
+	border: solid;
+border-radius: 10px;
 }
 .four.wide.column.high	{
 font-size:100px;
@@ -29,11 +30,26 @@ font-size:100px;
 }
 .four.wide.column.low {
 	font-size:100px;
+	
 }
+
+
+.eight.wide.column.diddy {
+background-color: #D94141;
+font-size: 47px;
+text-align:justify;
+text-transform: uppercase;
+color: #D99C9C;
+border-radius: 10px;
+}
+
 
 body {
 	background-color: ;
+
+
 }
+
 
 
 
